# pd-modeling-project

./: .gitignore  LICENSE  Makefile  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: docs.yml
docs/: mkdocs.yml
docs/docs/: backtesting.md  calibration.md  data_pipeline.md  index.md  modeling.md  performance.md  processing.md  stability.md  validation_pipeline.md  vintage.md
models/l1_stacking/: l1_model_summary.json
models/l2_stacking/: l2_model_summary.json
models/l3_stacking/: l3_model_summary.json
notebooks/: EDA.ipynb  calibration_analysis.ipynb  pipeline_execution.ipynb  stability_analysis.ipynb  validation_metrics.ipynb  vintage_analysis.ipynb
src/data_pipeline/: loaders.py  processor.py
src/modeling/: base_models.py  feature_selector.py  stacking.py  tuner.py
src/processing/: data_validator.py  encoding.py  imputation.py
src/utils/: utils.py
src/validation/: backtesting.py  calibration_analysis.py  performance_metrics.py  stability.py  vintage_analysis.py
